--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -41,11 +41,12 @@ ADD_UNDERSCORE(fgetchar)
 ADD_UNDERSCORE(fgetwchar)
 ADD_UNDERSCORE(filelength)
 ADD_UNDERSCORE(fileno)
-; fpreset)
+; Alias fpreset is set in CRT_fp10.c and CRT_fp8.c.
+; ADD_UNDERSCORE(fpreset)
 ADD_UNDERSCORE(fputchar)
 ADD_UNDERSCORE(fputwchar)
-;fstat)
-;ftime)
+; ADD_UNDERSCORE(fstat)
+; ADD_UNDERSCORE(ftime)
 ADD_UNDERSCORE(gcvt)
 ADD_UNDERSCORE(getch)
 ADD_UNDERSCORE(getche)
@@ -90,7 +91,7 @@ ADD_UNDERSCORE(spawnv)
 ADD_UNDERSCORE(spawnve)
 ADD_UNDERSCORE(spawnvp)
 ADD_UNDERSCORE(spawnvpe)
-;stat)
+; ADD_UNDERSCORE(stat)
 #ifndef UCRTBASE
 ADD_UNDERSCORE(strcmpi)
 #endif
@@ -134,13 +135,13 @@ ADD_UNDERSCORE(y0)
 ADD_UNDERSCORE(y1)
 ADD_UNDERSCORE(yn)
 ADD_UNDERSCORE(chgsign)
-;scalb
+; ADD_UNDERSCORE(scalb)
 ADD_UNDERSCORE(finite)
 ADD_UNDERSCORE(fpclass)
 ; C99 functions
-;cabs
+; ADD_UNDERSCORE(cabs)
 ADD_UNDERSCORE(hypot)
-;logb
+; ADD_UNDERSCORE(logb)
 ADD_UNDERSCORE(nextafter)
 
 #ifndef UCRTBASE
