crt: Define 32-bit time function aliases for all CRT libraries
Header file time.h already redirects function call gmtime() to _gmtime32().
So if object file compiled with time.h is linked with e.g. libmsvcrt40.a
import library then it is needed to add redirection from _gmtime32 symbol
to gmtime symbol into libmsvcrt40.a library to ensure that application
would use gmtime symbol, because msvcrt40.dll does not provide _gmtime32.
Same applies for all other 32-bit time symbols.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/crtdll.def.in
+++ b/mingw-w64-crt/lib32/crtdll.def.in
@@ -297,9 +297,11 @@ _fputwchar
 _fsopen
 _fstat
 _ftime
+_ftime32 == _ftime
 _ftol
 _fullpath
 _futime
+_futime32 == _futime
 _gcvt
 _get_osfhandle
 _getch
@@ -506,6 +508,7 @@ _ungetch
 _unlink
 _unloaddll
 _utime
+_utime32 == _utime
 _vsnprintf
 _vsnwprintf
 _wcsdup
@@ -549,8 +552,9 @@ clock
 cos DATA
 cosh
 ctime DATA
-;_ctime32 = ctime
+_ctime32 == ctime
 difftime
+_difftime32 == difftime
 div
 exit
 exp DATA
@@ -586,7 +590,7 @@ getchar
 getenv
 gets
 gmtime DATA
-;_gmtime32 = gmtime
+_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -618,7 +622,7 @@ ldexp DATA
 ldiv
 localeconv
 localtime DATA
-;_localtime32 = localtime
+_localtime32 == localtime
 log
 log10
 longjmp
@@ -632,7 +636,7 @@ memcpy
 memmove
 memset
 mktime DATA
-;_mktime32 = mktime
+_mktime32 == mktime
 modf
 perror
 pow
@@ -685,7 +689,7 @@ system
 tan
 tanh
 time DATA
-;_time32 = time
+_time32 == time
 tmpfile
 tmpnam
 tolower
