--- a/mingw-w64-crt/lib32/msvcr70.def.in
+++ b/mingw-w64-crt/lib32/msvcr70.def.in
@@ -349,10 +349,12 @@ _fstat
 _fstat64
 _fstati64
 _ftime
+_ftime32 == _ftime
 _ftime64
 _ftol
 _fullpath
 _futime
+_futime32 == _futime
 _futime64
 _gcvt
 _get_osfhandle
@@ -614,6 +616,7 @@ _unlink
 _unloaddll
 _unlock
 _utime
+_utime32 == _utime
 _utime64
 _vscprintf
 _vscwprintf
@@ -640,6 +643,7 @@ _wcstoi64
 _wcstoui64
 _wcsupr
 _wctime
+_wctime32 == _wctime
 _wctime64
 _wctype DATA
 _wenviron DATA
@@ -706,6 +710,7 @@ _wtoi64
 _wtol
 _wunlink
 _wutime
+_wutime32 == _wutime
 _wutime64
 _y0
 _y1
@@ -729,7 +734,9 @@ clock
 cos
 cosh
 ctime
+_ctime32 == ctime
 difftime
+_difftime32 == difftime
 div
 exit
 exp
@@ -769,6 +776,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -800,6 +808,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 == localtime
 log
 log10
 longjmp
@@ -813,6 +822,7 @@ memcpy
 memmove
 memset
 mktime
+_mktime32 == mktime
 modf
 perror
 pow
@@ -867,6 +877,7 @@ system
 tan
 tanh
 time
+_time32 == time
 tmpfile
 tmpnam
 tolower
