--- a/mingw-w64-crt/lib32/msvcr71.def.in
+++ b/mingw-w64-crt/lib32/msvcr71.def.in
@@ -342,10 +342,12 @@ _fstat
 _fstat64
 _fstati64
 _ftime
+_ftime32 == _ftime
 _ftime64
 _ftol
 _fullpath
 _futime
+_futime32 == _futime
 _futime64
 _gcvt
 _get_heap_handle
@@ -609,6 +611,7 @@ _unlink
 _unloaddll
 _unlock
 _utime
+_utime32 == _utime
 _utime64
 _vscprintf
 _vscwprintf
@@ -635,6 +638,7 @@ _wcstoi64
 _wcstoui64
 _wcsupr
 _wctime
+_wctime32 == _wctime
 _wctime64
 _wctype DATA
 _wenviron DATA
@@ -701,6 +705,7 @@ _wtoi64
 _wtol
 _wunlink
 _wutime
+_wutime32 == _wutime
 _wutime64
 _y0
 _y1
@@ -724,7 +729,9 @@ clock
 cos
 cosh
 ctime
+_ctime32 == ctime
 difftime
+_difftime32 == difftime
 div
 exit
 exp
@@ -764,6 +771,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -795,6 +803,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 == localtime
 log
 log10
 longjmp
@@ -808,6 +817,7 @@ memcpy
 memmove
 memset
 mktime
+_mktime32 == mktime
 modf
 perror
 pow
@@ -862,6 +872,7 @@ system
 tan
 tanh
 time
+_time32 == time
 tmpfile
 tmpnam
 tolower
