--- a/mingw-w64-crt/lib32/msvcrt40.def.in
+++ b/mingw-w64-crt/lib32/msvcrt40.def.in
@@ -1145,9 +1145,11 @@ _fsopen
 _fstat
 _fstati64
 _ftime
+_ftime32 == _ftime
 _ftol
 _fullpath
 _futime
+_futime32 == _futime
 _gcvt
 _get_osfhandle
 _getch
@@ -1378,6 +1380,7 @@ _ungetch
 _unlink
 _unloaddll
 _utime
+_utime32 == _utime
 _vsnprintf
 _vsnwprintf
 _waccess
@@ -1398,6 +1401,7 @@ _wcsrev
 _wcsset
 _wcsupr
 _wctime
+_wctime32 == _wctime
 _wenviron DATA
 _wexecl
 _wexecle
@@ -1457,6 +1461,7 @@ _wtoi
 _wtol
 _wunlink
 _wutime
+_wutime32 == _wutime
 _y0
 _y1
 _yn
@@ -1479,7 +1484,9 @@ clock
 cos
 cosh
 ctime
+_ctime32 == ctime
 difftime
+_difftime32 == difftime
 div
 exit
 exp
@@ -1519,6 +1526,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -1550,6 +1558,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 == localtime
 log
 log10
 longjmp
@@ -1563,6 +1572,7 @@ memcpy
 memmove
 memset
 mktime
+_mktime32 == mktime
 modf
 perror
 pow
@@ -1617,6 +1627,7 @@ system
 tan
 tanh
 time
+_time32 == time
 tmpfile
 tmpnam
 tolower
