--- a/mingw-w64-crt/lib32/msvcrt20.def.in
+++ b/mingw-w64-crt/lib32/msvcrt20.def.in
@@ -1042,9 +1042,11 @@ _fputwchar
 _fsopen
 _fstat
 _ftime
+_ftime32 == _ftime
 _ftol
 _fullpath
 _futime
+_futime32 == _futime
 _gcvt
 _get_osfhandle
 _getch
@@ -1297,6 +1299,7 @@ _ungetch
 _unlink
 _unloaddll
 _utime
+_utime32 == _utime
 _vsnprintf
 _vsnwprintf
 _waccess
@@ -1317,6 +1320,7 @@ _wcsrev
 _wcsset
 _wcsupr
 _wctime
+_wctime32 == _wctime
 _wenviron DATA
 _wexecl
 _wexecle
@@ -1373,6 +1377,7 @@ _wtoi
 _wtol
 _wunlink
 _wutime
+_wutime32 == _wutime
 _y0
 _y1
 _yn
@@ -1395,7 +1400,9 @@ clock
 cos
 cosh
 ctime
+_ctime32 == ctime
 difftime
+_difftime32 == difftime
 div
 exit
 exp
@@ -1435,6 +1442,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 == gmtime
 is_wctype
 isalnum
 isalpha
@@ -1466,6 +1474,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 == localtime
 log
 log10
 longjmp
@@ -1479,6 +1488,7 @@ memcpy
 memmove
 memset
 mktime
+_mktime32 == mktime
 modf
 perror
 pow
@@ -1533,6 +1543,7 @@ system
 tan
 tanh
 time
+_time32 == time
 tmpfile
 tmpnam
 tolower
