--- a/mingw-w64-crt/lib32/msvcrt40.def.in
+++ b/mingw-w64-crt/lib32/msvcrt40.def.in
@@ -989,28 +989,22 @@ _CIsinh
 _CIsqrt
 _CItan
 _CItanh
-_CxxThrowException@8
 _EH_prolog
 _HUGE DATA
 _XcptFilter
 __CxxFrameHandler
-__CxxLongjmpUnwind@4
 __RTCastToVoid
 __RTDynamicCast
 __RTtypeid
 __STRINGTOLD
-__argc DATA
-__argv DATA
 __dllonexit
 __doserrno
 __fpecode
 __getmainargs
-__initenv DATA
 __isascii
 __iscsym
 __iscsymf
 __lconv_init
-__mb_cur_max DATA
 __p___argc
 __p___argv
 __p___initenv
@@ -1021,7 +1015,6 @@ __p__acmdln
 __p__amblksiz
 __p__commode
 __p__daylight
-__p__dstbias
 __p__environ
 __p__fmode
 __p__iob
@@ -1045,27 +1038,15 @@ __threadhandle
 __threadid
 __toascii
 __unDName
-__wargv DATA
 __wgetmainargs
-__winitenv DATA
 _abnormal_termination
 _access
-_acmdln DATA
-_adj_fdiv_m16i@4
-_adj_fdiv_m32@4
-_adj_fdiv_m32i@4
-_adj_fdiv_m64@8
 _adj_fdiv_r
-_adj_fdivr_m16i@4
-_adj_fdivr_m32@4
-_adj_fdivr_m32i@4
-_adj_fdivr_m64@8
 _adj_fpatan
 _adj_fprem
 _adj_fprem1
 _adj_fptan
 _adjust_fdiv DATA
-_aexit_rtn DATA
 _amsg_exit
 _assert
 _atodbl
@@ -1085,7 +1066,6 @@ _chsize
 _clearfp
 _close
 _commit
-_commode DATA
 _control87
 _controlfp
 _copysign
@@ -1095,14 +1075,11 @@ _creat
 _cscanf
 _ctype DATA
 _cwait
-_daylight DATA
-_dstbias DATA
 _dup
 _dup2
 _ecvt
 _endthread
 _endthreadex
-_environ DATA
 _eof
 _errno
 _except_handler2
@@ -1135,7 +1112,6 @@ _findnexti64
 _finite
 _flsbuf
 _flushall
-_fmode DATA
 _fpclass
 _fpieee_flt
 _fpreset
@@ -1160,7 +1136,6 @@ _getdiskfree
 _getdllprocaddr
 _getdrive
 _getdrives
-_getmaxstdio
 _getmbcp
 _getpid
 _getsystime
@@ -1175,10 +1150,6 @@ _heapused
 _heapwalk
 _hypot
 _initterm
-_inp
-_inpd
-_inpw
-_iob DATA
 _isatty
 _isctype
 _ismbbalnum
@@ -1242,7 +1213,6 @@ _mbctokata
 _mbctolower
 _mbctombb
 _mbctoupper
-_mbctype DATA
 _mbsbtype
 _mbscat
 _mbschr
@@ -1296,13 +1266,7 @@ _nextafter
 _onexit
 _open
 _open_osfhandle
-_osver DATA
-_outp
-_outpd
-_outpw
 _pclose
-_pctype DATA
-_pgmptr DATA
 _pipe
 _popen
 _purecall
@@ -1310,7 +1274,6 @@ _putch
 _putenv
 _putw
 _putws
-_pwctype DATA
 _read
 _rmdir
 _rmtmp
@@ -1322,7 +1285,6 @@ _safe_fprem
 _safe_fprem1
 _scalb
 _searchenv
-_seh_longjmp_unwind@4
 _set_error_mode
 _seterrormode
 _setjmp
@@ -1368,10 +1330,8 @@ _sys_nerr DATA
 _tell
 _telli64
 _tempnam
-_timezone DATA
 _tolower
 _toupper
-_tzname DATA
 _tzset
 _ultoa
 _ultow
@@ -1387,7 +1347,6 @@ _waccess
 _wasctime
 _wchdir
 _wchmod
-_wcmdln DATA
 _wcreat
 _wcsdup
 _wcsicmp
@@ -1402,7 +1361,6 @@ _wcsset
 _wcsupr
 _wctime
 _wctime32 == _wctime
-_wenviron DATA
 _wexecl
 _wexecle
 _wexeclp
@@ -1423,15 +1381,11 @@ _wfullpath
 _wgetcwd
 _wgetdcwd
 _wgetenv
-_winmajor DATA
-_winminor DATA
-_winver DATA
 _wmakepath
 _wmkdir
 _wmktemp
 _wopen
 _wperror
-_wpgmptr DATA
 _wpopen
 _wputenv
 _wremove
@@ -1666,3 +1620,60 @@ wcsxfrm
 wctomb
 wprintf
 wscanf
+
+; These symbols are not available in Win32s version of msvcrt40.dll
+__argc DATA
+__argv DATA
+__initenv DATA
+__mb_cur_max DATA
+__wargv DATA
+__winitenv DATA
+_acmdln DATA
+_aexit_rtn DATA
+_commode DATA
+_daylight DATA
+_environ DATA
+_fmode DATA
+_iob DATA
+_mbctype DATA
+_osver DATA
+_pctype DATA
+_pgmptr DATA
+_pwctype DATA
+_timezone DATA
+_tzname DATA
+_wcmdln DATA
+_wenviron DATA
+_winmajor DATA
+_winminor DATA
+_winver DATA
+_wpgmptr DATA
+
+; These symbols are not available in the original Microsoft Visual C++ 4.0 version of msvcrt40.dll
+; They were added in Microsoft Visual C++ 4.1 Upgrade version of msvcrt40.dll and are available also in all OS system versions of msvcrt40.dll
+_getmaxstdio
+_inp
+_inpd
+_inpw
+_outp
+_outpd
+_outpw
+; Following two symbols were not added into Win32s version of msvcrt40.dll
+__p__dstbias
+_dstbias DATA
+
+; These symbols are available in all Microsoft Visual C++ 4.x versions of msvcrt40.dll
+; They are available also in all Windows 9x OS system versions of msvcrt40.dll
+; But they are not available in any Windows NT-based OS system versions of msvcrt40.dll
+; In Windows NT-based OS system versions of msvcrt40.dll these symbols exists without @SIZE suffix
+_CxxThrowException@8
+__CxxLongjmpUnwind@4
+_adj_fdiv_m16i@4
+_adj_fdiv_m32@4
+_adj_fdiv_m32i@4
+_adj_fdiv_m64@8
+_adj_fdivr_m16i@4
+_adj_fdivr_m32@4
+_adj_fdivr_m32i@4
+_adj_fdivr_m64@8
+_seh_longjmp_unwind@4
