crt: msvcrt.def.in: Do not export symbol wcsnlen on I386 and X64
Symbol wcsnlen was first introduced in Windows Vista version of msvcrt.dll
and mingw-w64 already provides replacement implementation in libmingwex. So
always use the replacement implementation on I386 and X64 and do not export
it. Also remove DATA keyword and use it in the same way as other wc*
symbols like wcsrtombs.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1703,7 +1703,7 @@ wcsncmp
 wcsncpy
 wcsncpy_s
 ; We provide replacement implementation in libmingwex
-wcsnlen DATA
+F_ARM_ANY(wcsnlen)
 wcspbrk
 wcsrchr
 F_ARM_ANY(wcsrtombs)
