crt: msvcrt.def.in: Add C++ symbols introduced in Windows 2000
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -101,6 +101,10 @@ EXPORTS
 ?unexpected@@YAXXZ
 ; public: virtual char const *__thiscall exception::what(void)const
 ?what@exception@@UBEPBDXZ
+; void *__cdecl operator new[](unsigned int)
+??_U@YAPAXI@Z
+; void __cdecl operator delete[](void *)
+??_V@YAXPAX@Z
 $I10_OUTPUT
 #endif
 
